<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/familyName"
            android:id="@+id/textViewNume"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="54dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/firstName"
            android:id="@+id/textViewPrenume"
            android:layout_below="@+id/textViewNume"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mail"
            android:id="@+id/textViewEmail"
            android:layout_below="@+id/textViewPrenume"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/password"
            android:id="@+id/textViewParola"
            android:layout_below="@+id/textViewEmail"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView"
            android:layout_below="@+id/textViewParola"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/phone"
            android:id="@+id/textViewTelefon"
            android:layout_alignTop="@+id/textView"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextNume"
            android:layout_alignBottom="@+id/textViewNume"
            android:layout_toEndOf="@+id/textViewPrenume" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextPrenume"
            android:layout_above="@+id/textViewEmail"
            android:layout_toEndOf="@+id/textViewPrenume" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail"
            android:layout_above="@+id/textViewParola"
            android:layout_toEndOf="@+id/textViewPrenume" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextParola"
            android:layout_above="@+id/textViewTelefon"
            android:layout_alignStart="@+id/editTextEmail" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editTextTelefon"
            android:layout_alignBottom="@+id/textViewTelefon"
            android:layout_alignStart="@+id/editTextParola" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:id="@+id/buttonAccepta"
            android:layout_below="@+id/editTextTelefon"
            android:layout_alignEnd="@+id/editTextTelefon"
            android:layout_marginTop="117dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:id="@+id/buttonRefuza"
            android:layout_alignTop="@+id/buttonAccepta"
            android:layout_toEndOf="@+id/textViewNume" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarRegister"
            android:layout_above="@+id/editTextPrenume"
            android:layout_centerHorizontal="true"
            android:indeterminate="false" />

    </RelativeLayout>
</LinearLayout>
